# NUC970_Linux_Applications

./: .gitattributes  .gitignore  Makeallfile  Makefile
DPO_RT3070_LinuxSTA_V2.3.0.2_20100412/: ._LICENSE ralink-firmware.txt  ._Makefile  ._README_STA_usb  ._chips  ._common  ._include  ._iwpriv_usage.txt  ._os  ._sta  ._sta_ate_iwpriv_usage.txt  ._tools  LICENSE_ralink-firmware.txt  Makefile  build_info.txt
DPO_RT3070_LinuxSTA_V2.3.0.2_20100412/chips/: ._rt3070.c  ._rt30xx.c  ._rt3593.c  .rt3070.o.cmd  rt3070.c  (+3 more)
EC20_driver_application/: Readme.txt
Python-2.7.9/: Makefile.pre.in  Python-2.7.9-removetest-patch  Python-2.7.9-xcompile-patch  make_python.sh
busybox-1.22.1/: .config  .config.old
emWin/: README  README.txt
ethtool-4.6/: Makefile.am  Makefile.in  NEWS  configure  configure.ac  ethtool-copy.h  ethtool.8.in  ethtool.c  internal.h  sfpid.c
i2c-tools/: CHANGES  Makefile  README
jpeg-9a/: Makefile  _HOW_TO_BUILD  _MY_HELP_  config.status  jcapimin.c  jcapistd.c  jcinit.c  jcomapi.c  jcparam.c  jdapimin.c  jdapistd.c  jdatadst.c  jdatasrc.c  jdinput.c  jdmarker.c  jdmaster.c  jdtrans.c  jinclude.h  jpegcodec.h  libtool
libuuid-1.0.3/: Makefile  Makefile.in  config.status  configure  libtool  uuid.pc
lighttpd-1.4.39/: Makefile.in  config.h.in  configure
lzo-2.09/: Makefile  config.h  config.status  libtool
minigui/libminigui-gpl-3.0.12/src/newgal/nuc970/: Makefile.am  Makefile.in  gal-nuc970.c  gal-nuc970.h
minigui/mg-samples-3.0.12/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.in
minigui/mg-samples-3.0.12/ctrl_dlg/: Makefile.am  Makefile.in  button.c  combobox.c  coolbar.c  dlgdemo.c  dlgdemo.h  dlgdemo_res_cn.h  dlgdemo_res_en.h  dlgdemo_res_tw.h  dlgres.c  edit.c  grid.c  listbox.c  listview.c  menubutton.c  monthcalendar.c  newtoolbar.c  progbar.c  psdemo.c  resouce.h  static.c  subclass.c  timeedit.c  toolbar.c  trackbar.c  treeview.c
minigui/mg-samples-3.0.12/ctrl_dlg/res/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/dbuff/: Makefile.am  Makefile.in  dbuff.c  watch.c
minigui/mg-samples-3.0.12/dbuff/res/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/font_text/: EUC-KR.txt  Makefile.am  Makefile.in  arabicdemo.c  arabictext.txt  big5.txt  bmpfontdemo.c  font_text.c  font_text_res_cn.h  font_text_res_en.h  font_text_res_tw.h  gb2312.txt  gbk.txt  hanguldemo.c  hangultext.txt  hebrewdemo.c  hebrewtext.txt  iso8859-1.txt  iso8859-15-France.txt  japandemo.c  japantext.txt  thaifont.c  thaifont_res_cn.h  thaifont_res_en.h  thaifont_res_tw.h
minigui/mg-samples-3.0.12/graphics/: Makefile.am  Makefile.in  graphics.c  graphics_res_cn.h  graphics_res_en.h  graphics_res_tw.h  graphicsex.c  graphicsex_res_cn.h  graphicsex_res_en.h  graphicsex_res_tw.h
minigui/mg-samples-3.0.12/graphics/res/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/housekeeper/: Makefile.am  Makefile.in  data.c  housekeeper.c  housekeeper_res_cn.h  housekeeper_res_en.h  housekeeper_res_tw.h  map.c  map.h
minigui/mg-samples-3.0.12/housekeeper/res/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/lf_skin/: Makefile.am  Makefile.in  README  lf_skin.c  lf_skin.h  lf_skin_res_cn.h  lf_skin_res_en.h  lf_skin_res_tw.h  register_res.c
minigui/mg-samples-3.0.12/lf_skin/res/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/lf_skin/res/skin_res/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/lf_skin/res/systemres/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/look_feel/: Makefile.am  Makefile.in  lf_common.h  lf_tiny.c  look_feel.c  tiny_iconview.c  tiny_listbox1.c  tiny_listbox2.c
minigui/mg-samples-3.0.12/look_feel/res/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/mginit/: Makefile.am  Makefile.in  desktop.c  desktop.h  desktop_res_cn.h  desktop_res_en.h  desktop_res_tw.h  mginit.c  taskbar.c  taskbar.h
minigui/mg-samples-3.0.12/mginit/res/: Makefile.in
minigui/mg-samples-3.0.12/minesweeper/: Makefile.am  Makefile.in  minesweeper.c  minesweeper_res_cn.h  minesweeper_res_en.h  minesweeper_res_tw.h
minigui/mg-samples-3.0.12/notebook/: Makefile.am  Makefile.in  big5.txt  gb2312.txt  main.c  notebook.h  notebook_res_cn.h  notebook_res_en.h  notebook_res_tw.h
minigui/mg-samples-3.0.12/notebook/res/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/same/: Makefile.am  Makefile.in  same.c  same_res_cn.h  same_res_en.h  same_res_tw.h
minigui/mg-samples-3.0.12/same/res/: Makefile.am  Makefile.in
minigui/mg-samples-3.0.12/src/: Makefile.am  Makefile.in  animation.c  animation_res_cn.h  animation_res_en.h  animation_res_tw.h  bitblt.c  bitblt_res_cn.h  bitblt_res_en.h  bitblt_res_tw.h  bmpbkgnd.c  bmpbkgnd_res_cn.h  bmpbkgnd_res_en.h  bmpbkgnd_res_tw.h  button.c  button_rec_cn.h  button_rec_en.h  button_rec_tw.h  capture.c  capture_res_cn.h  capture_res_en.h  capture_res_tw.h  caretdemo.c  caretdemo_res_cn.h  caretdemo_res_en.h  caretdemo_res_tw.h  combobox.c  combobox_res_cn.h  combobox_res_en.h  combobox_res_tw.h  coolbar.c  coolbar_res_cn.h  coolbar_res_en.h  coolbar_res_tw.h  createicon.c  createicon_res_cn.h  createicon_res_en.h  createicon_res_tw.h  cursordemo.c  cursordemo_res_cn.h  (+134 more)
minigui/mg-samples-3.0.12/src/res/: Makefile.am  Makefile.in
minigui/minigui-res-be-3.0.12/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in
minigui/minigui-res-be-3.0.12/bmp/: Makefile.am  Makefile.in
minigui/minigui-res-be-3.0.12/cursor/: Makefile.am  Makefile.in
minigui/minigui-res-be-3.0.12/font/: Makefile.am  Makefile.in
minigui/minigui-res-be-3.0.12/icon/: Makefile.am  Makefile.in
mtd-utils/: Makefile  common.mk
openssl-1.1.1/: Makefile  configdata.pm  libcrypto.so.1.1  libssl.so.1.1  pod2htmd.tmp
qt-everywhere-opensource-src-4.8.5/: .qmake.cache  .tag  Makefile  config.status
tslib-1.1/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
wireless_tools.29/: Makefile  ifrename  iwconfig  iwevent  iwgetid  iwlist  iwpriv  iwspy  libiw.so.29
yaffs2utils/: Makefile  mkyaffs2  mkyaffs2.c  nand_ecclayout.h  unspare2  unyaffs2  version.h
(+7801 files in other folders)
