noinst_PROGRAMS=ctrl_dlg
SUBDIRS = res

CUSTOMMG_SRC=../src/custom_minigui.c
ctrl_dlg_SOURCES=\
		ctrls.h  dlgdemo.h  dlgdemo_res_cn.h  dlgdemo_res_en.h  dlgdemo_res_tw.h  resouce.h \
		dlgdemo.c dlgres.c psdemo.c subclass.c \
        static.c button.c edit.c listbox.c combobox.c \
		menubutton.c toolbar.c trackbar.c progbar.c \
        monthcalendar.c treeview.c listview.c coolbar.c \
		timeedit.c newtoolbar.c $(CUSTOMMG_SRC)

EXTRA_DIST=bkgnd.jpg grid.c

