noinst_PROGRAMS=font_text

CUSTOMMG_SRC=../src/custom_minigui.c
font_text_SOURCES= \
	font_text_res_cn.h  font_text_res_en.h  font_text_res_tw.h  thaifont_res_cn.h  thaifont_res_en.h  thaifont_res_tw.h \
	arabicdemo.c hebrewdemo.c font_text.c \
	hanguldemo.c japandemo.c thaifont.c bmpfontdemo.c $(CUSTOMMG_SRC)

EXTRA_DIST=digits1.png  digits2.png  digits3.png  digits4.png arabictext.txt  EUC-KR.txt  gbk.txt \
   hebrewtext.txt iso8859-1.txt big5.txt gb2312.txt  hangultext.txt \
   iso8859-15-France.txt  japantext.txt
