COMMON_PROGS=scrnsaver helloworld mycontrol dialogbox simplekey \
                static button combobox edit listbox menubutton progressbar \
				trackbar newtoolbar propsheet palette palette_ex flame \
                scrollbar scrollbar_ctrl painter capture bitblt stretchblt loadbmp drawicon \
                createicon caretdemo cursordemo input bmpbkgnd fminigui \
                scrollwnd scrollwnd2 scrollview animation iconview gridview \
				gridview_ext \
                timeeditor listview spinbox monthcal coolbar treeview \
				nr_window scalerbmp

if MGRM_PROCESSES
LITE_PROGS=scrnsaver mginit
else
LITE_PROGS=
endif

CUSTOMMG_SRC=custom_minigui.c
noinst_PROGRAMS=$(LITE_PROGS) $(COMMON_PROGS) $(NEWGAL_PROGS)
scrnsaver_SOURCES=scrnsaver.c scrnsaver_res_en.h scrnsaver_res_cn.h \
									scrnsaver_res_tw.h $(CUSTOMMG_SRC)
helloworld_SOURCES=helloworld.c helloworld_res_en.h helloworld_res_cn.h \
				   helloworld_res_tw.h $(CUSTOMMG_SRC)
mycontrol_SOURCES=mycontrol.c $(CUSTOMMG_SRC)
dialogbox_SOURCES=dialogbox.c dialogbox_rec_en.h dialogbox_rec_cn.h \
				  dialogbox_rec_tw.h $(CUSTOMMG_SRC)
input_SOURCES=input.c input_res_en.h input_res_cn.h \
			  input_res_tw.h $(CUSTOMMG_SRC)
edit_SOURCES=edit.c edit_res_en.h edit_res_cn.h \
			 edit_res_tw.h $(CUSTOMMG_SRC)
listbox_SOURCES=listbox.c listbox_res_en.h listbox_res_cn.h \
				listbox_res_tw.h $(CUSTOMMG_SRC)
bmpbkgnd_SOURCES=bmpbkgnd.c bmpbkgnd_res_en.h bmpbkgnd_res_cn.h \
				 bmpbkgnd_res_tw.h $(CUSTOMMG_SRC)
fminigui_SOURCES=fminigui.c fminigui_res_en.h fminigui_res_cn.h \
				 fminigui_res_tw.h $(CUSTOMMG_SRC)
bitblt_SOURCES=bitblt.c bitblt_res_en.h bitblt_res_cn.h \
			   bitblt_res_tw.h $(CUSTOMMG_SRC)
stretchblt_SOURCES=stretchblt.c stretchblt_res_en.h stretchblt_res_cn.h \
				   stretchblt_res_tw.h $(CUSTOMMG_SRC)
loadbmp_SOURCES=loadbmp.c loadbmp_res_en.h loadbmp_res_cn.h \
				loadbmp_res_tw.h $(CUSTOMMG_SRC)
caretdemo_SOURCES=caretdemo.c caretdemo_res_en.h caretdemo_res_cn.h \
				  caretdemo_res_tw.h $(CUSTOMMG_SRC)
cursordemo_SOURCES=cursordemo.c cursordemo_res_en.h cursordemo_res_cn.h \
				   cursordemo_res_tw.h $(CUSTOMMG_SRC)
createicon_SOURCES=createicon.c createicon_res_en.h createicon_res_cn.h \
				   createicon_res_tw.h $(CUSTOMMG_SRC)
drawicon_SOURCES=drawicon.c drawicon_res_en.h drawicon_res_cn.h \
				 drawicon_res_tw.h $(CUSTOMMG_SRC)
simplekey_SOURCES=simplekey.c simplekey_res_en.h simplekey_res_cn.h \
				  simplekey_res_tw.h $(CUSTOMMG_SRC)
capture_SOURCES=capture.c capture_res_en.h capture_res_cn.h \
				capture_res_tw.h $(CUSTOMMG_SRC)
painter_SOURCES=painter.c painter_res_en.h painter_res_cn.h \
				painter_res_tw.h $(CUSTOMMG_SRC)
scrollbar_SOURCES=scrollbar.c scrollbar_res_en.h scrollbar_res_cn.h \
				  scrollbar_res_tw.h $(CUSTOMMG_SRC)
scrollbar_ctrl_SOURCES=scrollbar_ctrl.c scrollbar_ctrl_res_en.h scrollbar_ctrl_res_cn.h \
				  scrollbar_ctrl_res_tw.h $(CUSTOMMG_SRC)
static_SOURCES=static.c static_res_en.h static_res_cn.h \
			   static_res_tw.h $(CUSTOMMG_SRC)
button_SOURCES=button.c button_rec_en.h button_rec_cn.h \
			   button_rec_tw.h $(CUSTOMMG_SRC)
combobox_SOURCES=combobox.c combobox_res_en.h combobox_res_cn.h \
				 combobox_res_tw.h $(CUSTOMMG_SRC)
menubutton_SOURCES=menubutton.c menubutton_res_en.h menubutton_res_cn.h \
				   menubutton_res_tw.h $(CUSTOMMG_SRC)
progressbar_SOURCES=progressbar.c progressbar_res_en.h progressbar_res_cn.h \
					progressbar_res_tw.h $(CUSTOMMG_SRC)
trackbar_SOURCES=trackbar.c trackbar_res_en.h trackbar_res_cn.h \
				 trackbar_res_tw.h $(CUSTOMMG_SRC)
newtoolbar_SOURCES=newtoolbar.c newtoolbar_res_en.h newtoolbar_res_cn.h \
				   newtoolbar_res_tw.h $(CUSTOMMG_SRC)
propsheet_SOURCES=propsheet.c propsheet_res_en.h propsheet_res_cn.h \
				  propsheet_res_tw.h $(CUSTOMMG_SRC)
listview_SOURCES=listview.c listview_res_en.h listview_res_cn.h \
				 listview_res_tw.h $(CUSTOMMG_SRC)
spinbox_SOURCES=spinbox.c spinbox_res_en.h spinbox_res_cn.h \
				spinbox_res_tw.h $(CUSTOMMG_SRC)
monthcal_SOURCES=monthcal.c monthcal_res_en.h monthcal_res_cn.h \
				 monthcal_res_tw.h $(CUSTOMMG_SRC)
coolbar_SOURCES=coolbar.c coolbar_res_en.h coolbar_res_cn.h \
				coolbar_res_tw.h $(CUSTOMMG_SRC)
timeeditor_SOURCES=timeeditor.c timeeditor_res_en.h timeeditor_res_cn.h \
				   timeeditor_res_tw.h $(CUSTOMMG_SRC)
treeview_SOURCES=treeview.c treeview_res_en.h treeview_res_cn.h \
				 treeview_res_tw.h $(CUSTOMMG_SRC)
scrollwnd_SOURCES=scrollwnd.c scrollwnd_res_en.h scrollwnd_res_cn.h \
				  scrollwnd_res_tw.h $(CUSTOMMG_SRC)
scrollwnd2_SOURCES=scrollwnd2.c scrollwnd2_res_en.h scrollwnd2_res_cn.h \
				   scrollwnd2_res_tw.h $(CUSTOMMG_SRC)
scrollview_SOURCES=scrollview.c scrollview_res_en.h scrollview_res_cn.h \
				   scrollview_res_tw.h $(CUSTOMMG_SRC)
iconview_SOURCES=iconview.c iconview_res_en.h iconview_res_cn.h \
				 iconview_res_tw.h $(CUSTOMMG_SRC)
gridview_SOURCES=gridview.c gridview_res_en.h gridview_res_cn.h \
				 gridview_res_tw.h $(CUSTOMMG_SRC)
gridview_ext_SOURCES=gridview_ext.c gridview_ext_res_en.h gridview_ext_res_cn.h \
					 gridview_ext_res_tw.h $(CUSTOMMG_SRC)
animation_SOURCES=animation.c animation_res_en.h animation_res_cn.h \
				  animation_res_tw.h $(CUSTOMMG_SRC)
nr_window_SOURCES=nr_window.c $(CUSTOMMG_SRC)

scalerbmp_SOURCES=scalerbmp.c loadbmp_res_en.h loadbmp_res_cn.h \
				loadbmp_res_tw.h $(CUSTOMMG_SRC)

palette_SOURCES=palette.c $(CUSTOMMG_SRC)
palette_ex_SOURCES=palette_ex.c $(CUSTOMMG_SRC)
flame_SOURCES=flame.c $(CUSTOMMG_SRC)

mginit_SOURCES=mginit.c $(CUSTOMMG_SRC)

#textedit_SOURCES=textedit.c $(CUSTOMMG_SRC)
#scrolltest_SOURCES=scrolltest.c $(CUSTOMMG_SRC)

SUBDIRS=res
EXTRA_DIST=myicon.ico question.ico 
# close.png  pause.png  progress-bk.png  stop.png 
# timer.png   volume.png main.png   play.png   progress.png  sysmenu.png  volume-bk.png banner.gif 9.gif


