
# The directory where the data files will be installed
bmpdatadir = $(datadir)/minigui/res/bmp

bmpdata_DATA = \
classic_check_button.bmp  skin_bborder.bmp   skin_pb_htrack.gif  skin_sb_arrows.bmp  skin_tborder.bmp \
classic_radio_button.bmp  skin_bkgnd.bmp     skin_pb_htruck.bmp  skin_sb_hshaft.bmp  skin_tbslider_h.gif \
flat_check_button.bmp     skin_caption.gif   skin_pb_vtrack.gif  skin_sb_hthumb.bmp  skin_tbslider_v.gif \
flat_radio_button.bmp     skin_checkbtn.bmp  skin_pb_vtruck.bmp  skin_sb_vshaft.bmp  skin_tb_vert.gif \
skin_cpn_btn.gif          skin_pushbtn.gif   skin_sb_vthumb.bmp  skin_tree.bmp fashion_check_btn.bmp \
skin_arrows.gif           skin_header.bmp    skin_radiobtn.gif   skin_tab.gif fashion_radio_btn.bmp \
skin_arrows_shell.bmp     skin_lborder.bmp   skin_rborder.bmp    skin_tb_horz.gif

EXTRA_DIST = ${bmpdata_DATA}
