
# The directory where the data files will be installed
cursordatadir = $(datadir)/minigui/res/cursor

cursordata_DATA = \
d_arrow.cur  d_none.cur      d_uparrow.cur  g_maginify.cur  g_sizenesw.cur  h_move.cur    ho_sizeb.cur  ve_line.cur \
d_beam.cur   d_pencil.cur    d_wait.cur     g_move.cur      g_sizens.cur    h_ne.cur      ho_split.cur  ve_sizeb.cur \
d_busy.cur   d_sizenesw.cur  g_arrow.cur    g_nodrop.cur    g_sizenwse.cur  h_nodrop.cur  h_point.cur   ve_split.cur \
d_cross.cur  d_sizens.cur    g_col.cur      g_pencil.cur    g_sizewe.cur    h_ns.cur      h_select.cur \
d_help.cur   d_sizenwse.cur  g_drag.cur     g_rarrow.cur    h_cross.cur     h_nw.cur      h_we.cur \
d_move.cur   d_sizewe.cur    g_help.cur     g_row.cur       h_ibeam.cur     ho_line.cur

EXTRA_DIST = ${cursordata_DATA}
