
# The directory where the data files will be installed
icondatadir = $(datadir)/minigui/res/icon

icondata_DATA = \
excalmatory-flat.ico  failed.ico       fold-flat.ico  form.ico       unfold-flat.ico    warning.ico \
excalmatory.ico       folder-flat.ico  fold.ico       help-flat.ico  textfile-flat.ico  unfold.ico \
failed-flat.ico       folder.ico       form-flat.ico  help.ico       textfile.ico  \
warning-flat.ico

EXTRA_DIST=${icondata_DATA}
