EXTRA_DIST= \
bg_tiny.bmp  dc.ico  email.png  form.ico  mac_phone.png  month_cal.ico  notebook.png \
card.ico     dc.png     excalmatory.ico        gis.png        month_cal.png  set.ico \
card.png     dict.ico   failed.ico             ime_view.ico   music.ico      set.png \
clock.ico    dict.png   flat_check_button.bmp  ime_view.png   music.png      warning.ico \
clock.png    email.ico  flat_radio_button.bmp  mac_phone.ico  mg_help.ico    notebook.ico

