EXTRA_DIST=\
9.gif                 dt_bg.png               list_unselect_bottom.png  psw_ok_list.png        wifi_auto_cnt.png \
acroread.png          dt_calendar_bg.png      list_unselect_middle.png  realplayer.png         wifi_bg.png \
bg_list_1.png         dt_calendar_font.png    list_unselect_single.png  router.png             wifi_lock.png \
bkgnd.jpg             dt_time_down.png        list_unselect_top.png     save_list_1.png        wifi_select_icon.png \
bootp_close_list.png  dt_time_up.png          looknfeel.png             sdomain.png            wifi_select_signal0.png \
bootp_list_3.png      dt_wbar.png             signal_0.png              wifi_select_signal1.png \
btn_arrow_list.png    gateway.png             signal_1.png              wifi_select_signal2.png \
calendar_num1.png     gimp.png                signal_3.png              wifi_select_signal3.png \
calendar_num2.png     icons.png               map.bmp                   signal_4.png           wifi_unlock.png \
calendar_num.png      inputbox_bg.png         multimedia.png            signal_list.png        wifi_unselect_icon.png \
calendar_sw.png       ipaddr.png              nc_bar_fgn.png            sta.png                wifi_unselect_ignal1.png \
cancel_list_1.png     ipset_bg.png            nc_fgn.png                static_close_list.png  wifi_unselect_signal0.png \
clientid.png          ipset_list.png          new2.jpg                  static_open1.png       wifi_unselect_signal2.png \
dhcp_close1.png       kpilot.png              new3.jpg                  static_open_list.png   wifi_wifi.png \
dhcp_close_list.png   list.png                ok_list.png               stat_list_1.png        xemacs.png \
dhcp_list_1.png       list_select_bottom.png  open_list.png             submask.png            xmms.png \
dhcp_open_list.png    list_select_middle.png  package_games.png         tux.png \
dhcp.png              list_select_single.png  psw_bg.png                usb.png \
dns.png               list_select_top.png     psw_error_bg.png          wifi_arrow.png \
abc.jpg               audio.ico               flower.png                music.gif
