
## Makefile.am for the NUC970 video driver

INCLUDES = -I$(abs_top_srcdir)/src/include -I$(abs_top_srcdir)/include \
			            -I$(abs_top_srcdir)/src/newgal/

noinst_LTLIBRARIES = libvideo_nuc970.la

# The nuc970 video driver sources
SRC_FILES = gal-nuc970.c

HDR_FILES = gal-nuc970.h

libvideo_nuc970_la_SOURCES = $(SRC_FILES) $(HDR_FILES)

libvideo_nuc970_la_CFLAGS = 

EXTRA_DIST=

LIB_NAME=libvideo_nuc970
