EXTRA_DIST= \
lfskin_Arrows.gif        lfskin_other_Arrow_Shaft.bmp   lfskin_other_ProTrack.gif     lfskin_ProTrack.gif \
lfskin_Arrow_Shaft.gif   lfskin_other_BottomBorder.bmp  lfskin_other_RightBorder.bmp  lfskin_rightborder.bmp \
lfskin_bottomborder.gif  lfskin_other_Captionbtn.gif    lfskin_other_SB_arrows.gif    lfskin_sb_arrows.gif \
lfskin_Captionbtn.gif    lfskin_other_Caption.gif       lfskin_other_SB_HShaft.bmp    lfskin_SB_HShaft.bmp \
lfskin_Caption.gif       lfskin_other_Config.gif        lfskin_other_SB_Hthumb.gif    lfskin_SB_Hthumb.gif \
lfskin_Config.gif        lfskin_other_DisVolume.gif     lfskin_other_SB_VShaft.bmp    lfskin_SB_VShaft.bmp \
lfskin_DisVolume.gif     lfskin_other_HelpBack.gif      lfskin_other_SB_Vthumb.gif    lfskin_SB_Vthumb.gif \
lfskin_HelpBack.gif      lfskin_other_Help.gif          lfskin_other_Start.gif        lfskin_Start.gif \
lfskin_Help.gif          lfskin_other_HelpTreeBack.bmp  lfskin_other_Stop.gif         lfskin_Stop.gif \
lfskin_HProgressbar.gif  lfskin_other_HProgressbar.gif  lfskin_other_Tab.bmp          lfskin_Tab.gif \
lfskin_HTrackBar.gif     lfskin_other_HTrackBar.gif     lfskin_other_TrackBar.gif     lfskin_TrackBar.gif \
lfskin_leftborder.bmp    lfskin_other_LeftBorder.bmp    lfskin_other_Tree.bmp         lfskin_Tree.gif \
lfskin_Main.gif          lfskin_other_Main.gif          lfskin_other_Volume.gif       lfskin_Volume.gif \
lfskin_other_arrows.gif  lfskin_other_Pause.gif         lfskin_Pause.gif

